Add information about student management flow to the About page

--- a/shrew/templates/about.html
+++ b/shrew/templates/about.html
@@ -27,8 +27,12 @@
 
         <p>
           <strong>Ludwik Trammer</strong> built the tool and the site, and <strong>Jamie Nunez</strong> created the lessons and challenges. We started the site as a project for a graduate class at Georgia Tech - <strong>cs6460 Educational Technology</strong>.
-          If you want to know more, you can <a href="https://arxiv.org/abs/1808.01100">read our paper about Code Shrew</a>.
+          If you want to know more, you can <a href="https://arxiv.org/abs/1808.01100">read our paper about Code Shrew</a>.</p>
+
+        <p>
+          If you are a teacher, take a look at Code Shrew's <a href="{% url 'teachers:teacher' %}">student account management flow</a>.
         </p>
+
 
         <h2>Technology</h2>
         <p>We proudly use the following technologies (and many others):</p>
