Hide click in togetherjs sessions

--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG" crossorigin="anonymous">
     <script type="text/javascript">
       var TogetherJSConfig_hubBase = "https://togetherjs-hub.glitch.me/";
+      var TogetherJSConfig_dontShowClicks = true;
       var TogetherJSConfig_disableWebRTC = true;
     </script>
     <script src="https://togetherjs.com/togetherjs-min.js"></script>
