Better togetherjs config

--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -32,6 +32,8 @@
       var TogetherJSConfig_hubBase = "https://togetherjs-hub.glitch.me/";
       var TogetherJSConfig_dontShowClicks = true;
       var TogetherJSConfig_disableWebRTC = true;
+      var TogetherJSConfig_suppressJoinConfirmation = true;
+      var TogetherJSConfig_toolName = "Code Shrew's collaboration";
     </script>
     <script src="https://togetherjs.com/togetherjs-min.js"></script>
     {% block extrahead %}{% endblock %}
