--- a/shrew/templates/creations/editor.html
+++ b/shrew/templates/creations/editor.html
@@ -13,7 +13,7 @@
         Learn about:
         <a href="/documentation/shapes/" target="_blank">shapes</a>,
         <a href="/documentation/icons/" target="_blank">icons</a>,
-        <a href="/documentation/icons/" target="_blank">colors</a>,
+        <a href="/documentation/colors/" target="_blank">colors</a>,
         <a href="/documentation/animations/" target="_blank">animations</a>, and
         <a href="{% url 'pages:category-detail' slug='lessons' %}" target="_blank">learning Python</a>.
     </div>
