Even better help text

--- a/shrew/templates/creations/editor.html
+++ b/shrew/templates/creations/editor.html
@@ -15,7 +15,7 @@
         <a href="/documentation/icons/" target="_blank">icons</a>,
         <a href="/documentation/colors/" target="_blank">colors</a>,
         <a href="/documentation/animations/" target="_blank">animations</a>, and
-        <a href="{% url 'pages:category-detail' slug='lessons' %}" target="_blank">learning Python</a>.
+        <a href="{% url 'pages:category-detail' slug='lessons' %}" target="_blank">the Python language</a>.
     </div>
   </article>
 {% endblock %}
