Disable preview area when there is an error

--- a/shrew/templates/creations/_editor.html
+++ b/shrew/templates/creations/_editor.html
@@ -64,6 +64,9 @@
     </div>
     <div class="column">
       <div class="sandbox-wrapper">
+        <div class="error-overlay">
+          <i class="fas fa-exclamation-triangle"></i>
+        </div>
         <iframe id="interpreter-sandbox" scrolling="no" src="{% url 'creations:interpreter-sandbox' %}"
             sandbox="allow-scripts"></iframe>
       </div>
