--- a/shrew/static/sass/_editor.scss
+++ b/shrew/static/sass/_editor.scss
@@ -8,6 +8,23 @@
   padding-bottom: 100%;
   height: 0;
   overflow: hidden;
+
+  .error-overlay {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(235,235,235,0.7);
+    color: $danger;
+    font-size: 5rem;
+    align-items: center;
+    justify-content: center;
+
+    #shrew-editor.has-errors & {
+      display: flex;
+    }
+  }
 }
 
 #interpreter-sandbox {
