Show code errors inline

--- a/shrew/static/sass/_editor.scss
+++ b/shrew/static/sass/_editor.scss
@@ -123,3 +123,10 @@
 #shrew-editor {
   margin-bottom: 0.75rem;
 }
+
+.editor-error-message {
+  @extend .message;
+  @extend .is-danger;
+  margin: 5px;
+  margin-bottom: 20px;
+}
